# tts_stt_bot

./: .env.example  .gitignore  Cargo.toml  README.md  check_db.py
persona/: IDENTITY.md  SECURITY.md  SOUL.md
scripts/: piper_tts.py
sidecars/xtts/: requirements.txt  server.py
src/: config.rs  lib.rs  main.rs
src/agent/: approval.rs  context.rs  executor.rs  identity.rs  mod.rs  tools.rs
src/ai/: llm.rs  stt.rs  tts.rs
src/bot/: callbacks.rs  commands.rs  handlers.rs  mod.rs
src/db/: mod.rs  models.rs
