[package]
name = "tts_stt_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# HTTP Client (for Groq API, XTTS sidecar)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# STT (Whisper bindings to whisper.cpp)
whisper-rs = "0.12"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.10.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0"

# Async process for command execution & TTS subprocess
# (tokio already provides tokio::process)
